Proyecto inicial: backend Spring Boot + frontend React + database